= DDT Change Log =

== DDT 0.4.2 (devel) ==
 * Fixed #33, bug with spaces in projects names: made all variables in DMD response file resolve to quote escaped values.
 * Fixed bug where all D comments where considered documentation comments for documentation hover.
 * Fixed limitation where problem hovers where not more priority than documentation hovers

== DDT 0.4.1 (2011-03-04) ==
 * Fixed some parser bugs. (mostly relating to Template Instance references and source with invalid syntax)
 * Fixed #25 and other source highlighting bugs (like nested comments being lexed as non-nested comments). 
   Also added additional syntax highlighting options for WYSIWYG strings, delimited strings, and character literals.
 * Fixed a bug due to reuse of a single instance of the editor source-highlighting & folding parser. 
    This bug may have been manifested in obscure, unknown, and/or hard to replicate ways.
 * Fixed #17, #18, #20, all related to editor auto edits. Properly implemented:
   * Editor auto-edits (smart indenting/deindenting according to block structure), added "Typing" preference page.

== DDT 0.4.0 (2010-11-17) ==
 * Renamed project to DDT
 * Updated IDE to latest DLTK version (2.0).
 * Fixed comment indentation character (was '#' instead of '//') on toggle comment actions 
 * Fixed defaults bug in DeeRootPreferencePage and DeeEditorPreferencePage.
 * Added DEEBUILDER.COMPILEREXEPATH variable to builder, changed builder response file defaults.
 * Fixed parser to be able to parse expressions as the argument of typeid.
 * Added a parser workaround to allow parsing D source with annotations.
 * Fixed several parser bugs.
 * Removed Content Assist Templates preference page.
 
== Mmrnmhrm 0.3.1 (2010-04-12) ==
 * Updated IDE to latest DLTK version (1.0), fixed bugs related to DLTK version migration.
 * Added Eclipse feature and update-site (so now supports automatic updating).
 * Updated support for new folder layout in newer DMD compiler installations.